--- a/4-DOM-Pig-Game/style.css
+++ b/4-DOM-Pig-Game/style.css
@@ -141,6 +141,20 @@ i {
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
 
+.final-score{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 520px;
+    color: #555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width: 160px;
+    text-transform: uppercase;
+}
+.final-score:focus{outline: none;}
 .dice {
     position: absolute;
     left: 50%;
@@ -149,6 +163,22 @@ i {
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
+#dice-1{
+    top: 120px;
+}
+#dice-2{
+    top: 250px;
+}
+/*
+.dice2 {
+    position: absolute;
+    left: 50%;
+    top: 278px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+*/
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
